--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,12 +91,10 @@ centos7-release:
     - conan install . -if=build/Release -s build_type=Release --build=missing --build=hdf5 --profile=linux_x86_64_gcc11_legacy
     - rm CMakeUserPresets.json
     - cmake --preset=release
-    - cmake --build --preset=release
-    - conan export-pkg . -pr linux_x86_64_gcc11 -f -bf=build/Release
+    - cmake --build --preset=release    
   artifacts:
     paths:
       - $BUILD_DIR/
-      - $CI_PROJECT_DIR/.conan/data/kafka-to-nexus/
 
 almalinux9-debug:
   stage: build
@@ -125,3 +123,57 @@ almalinux9-release:
   artifacts:
     paths:
       - $BUILD_DIR/
+
+centos7-publish:
+  stage: publish
+  image: $ALMALINUX9_IMAGE
+  dependencies:
+    - centos7-release
+  before_script:
+    - curl -fL https://install-cli.jfrog.io | sh
+    - jf config add $ESS_ARTIFACTORY_ID --url=$ESS_ARTIFACTORY_URL --user=$ESS_ARTIFACTORY_ECDC_USER --password=$ESS_ARTIFACTORY_ECDC_GENERIC_TOKEN
+    - jf config show
+  script:
+    - conan export-pkg . kafka-to-nexus/${VERSION}@ -f -bf=build/Release
+    - PKG_PATH=$(find .conan/data/kafka-to-nexus -type d -name package | head -n 1)
+    - ARCHIVE_NAME="kafka-to-nexus-${VERSION}-centos7.tar.gz"
+    - tar -czf "${ARCHIVE_NAME}" -C "${PKG_PATH}"" .
+    - jf rt u --build-name="kafka-to-nexus-centos7" --build-number=${CI_PIPELINE_IID} "${ARCHIVE_NAME}" ecdc-generic-release/${ARTIFACTORY_UPLOAD_PATH}
+  rules:
+    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
+      variables:
+        VERSION: ${CI_COMMIT_SHORT_SHA}
+        ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/${CI_DEFAULT_BRANCH}/${CI_PIPELINE_IID}/"
+    - if: $CI_COMMIT_TAG
+      variables:
+        VERSION: ${CI_COMMIT_TAG}
+        ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: never
+
+almalinux9-publish:
+  stage: publish
+  image: $ALMALINUX9_IMAGE
+  dependencies:
+    - almalinux9-release
+  before_script:
+    - curl -fL https://install-cli.jfrog.io | sh
+    - jf config add $ESS_ARTIFACTORY_ID --url=$ESS_ARTIFACTORY_URL --user=$ESS_ARTIFACTORY_ECDC_USER --password=$ESS_ARTIFACTORY_ECDC_GENERIC_TOKEN
+    - jf config show
+  script:
+    - conan export-pkg . kafka-to-nexus/${VERSION}@ -f -bf=build/Release
+    - PKG_PATH=$(find .conan/data/kafka-to-nexus -type d -name package | head -n 1)
+    - ARCHIVE_NAME="kafka-to-nexus-${VERSION}-almalinux9.tar.gz"
+    - tar -czf "${ARCHIVE_NAME}" -C "${PKG_PATH}"" .
+    - jf rt u --build-name="kafka-to-nexus-almalinux9" --build-number=${CI_PIPELINE_IID} "${ARCHIVE_NAME}" ecdc-generic-release/${ARTIFACTORY_UPLOAD_PATH}
+  rules:
+    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
+      variables:
+        VERSION: ${CI_COMMIT_SHORT_SHA}
+        ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/${CI_DEFAULT_BRANCH}/${CI_PIPELINE_IID}/"
+    - if: $CI_COMMIT_TAG
+      variables:
+        VERSION: ${CI_COMMIT_TAG}
+        ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: never
