--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,6 @@ workflow:
 variables:
   ALMALINUX9_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-almalinux9-conan:1.3.1"
   CENTOS7_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-conan:1.2.0-dev.1"
-  BUILD_DIR: "build"
   CONAN_USER_HOME: "$CI_PROJECT_DIR"
 
 stages:
@@ -97,7 +96,8 @@ centos7-release:
     - conan export-pkg . kafka-to-nexus/$VERSION@ -f -bf=build/Release
     - PKG_PATH=$(find .conan/data/kafka-to-nexus/$VERSION/_/_/package -mindepth 1 -maxdepth 1 -type d | head -n 1)
     - ARCHIVE_NAME="kafka-to-nexus-${VERSION}-centos7.tar.gz"
-    - tar czfv $ARCHIVE_NAME -C $PKG_PATH .
+    - mkdir -p dist
+    - tar czf dist/$ARCHIVE_NAME -C $PKG_PATH .
   rules:
     - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
       variables:
@@ -110,8 +110,8 @@ centos7-release:
         VERSION: ${CI_COMMIT_SHORT_SHA}
   artifacts:
     paths:
-      - $BUILD_DIR/
-      - $ARCHIVE_NAME
+      - build/
+      - dist/
 
 almalinux9-debug:
   stage: build
@@ -139,7 +139,8 @@ almalinux9-release:
     - conan export-pkg . kafka-to-nexus/$VERSION@ -f -bf=build/Release
     - PKG_PATH=$(find .conan/data/kafka-to-nexus/$VERSION/_/_/package -mindepth 1 -maxdepth 1 -type d | head -n 1)
     - ARCHIVE_NAME="kafka-to-nexus-${VERSION}-almalinux9.tar.gz"
-    - tar czfv $ARCHIVE_NAME -C $PKG_PATH .
+    - mkdir -p dist
+    - tar czf dist/$ARCHIVE_NAME -C $PKG_PATH .
   rules:
     - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
       variables:
@@ -152,8 +153,8 @@ almalinux9-release:
         VERSION: ${CI_COMMIT_SHORT_SHA}
   artifacts:
     paths:
-      - $BUILD_DIR/
-      - $ARCHIVE_NAME
+      - build/
+      - dist/
 
 publish-tar-archives:
   stage: publish
