--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,12 +11,12 @@ workflow:
     - if: $CI_COMMIT_TAG
 
 variables:
-  ALMALINUX9_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-almalinux9-conan:1.2.0"
-  CENTOS7_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-conan:1.0.0"
-  BUILD_DIR: "build"
+  ALMALINUX9_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-almalinux9-conan:1.3.1"
+  CENTOS7_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-conan:1.2.0"
+  CONAN_USER_HOME: "$CI_PROJECT_DIR"
 
 stages:
-  - test
+  - check
   - build
   - archive
   - domain
@@ -24,14 +24,14 @@ stages:
   - publish
 
 clang-format:
-  stage: test
+  stage: check
   image: $ALMALINUX9_IMAGE
   script:
-    - ci/check-formatting.sh
-  allow_failure: true
+    - find apps/ src/ tests/ -type f \( -name '*.cpp' -o -name '*.cxx' -o -name '*.c' -o -name '*.h' \) > clang_format_files.txt
+    - xargs clang-format --dry-run --Werror < clang_format_files.txt
 
 black:
-  stage: test
+  stage: check
   image: $ALMALINUX9_IMAGE
   script:
     - python3 -m venv venv
@@ -43,7 +43,7 @@ black:
     - black --check domain-tests
 
 cppcheck:
-  stage: test
+  stage: check
   image: $ALMALINUX9_IMAGE
   script:
     - cppcheck --version
