--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -144,7 +144,7 @@ almalinux9-release:
     - conan install . -if=build/Release -s build_type=Release --build=missing --profile=linux_x86_64_gcc11
     - rm CMakeUserPresets.json # workaround, will be removed once we switch to conan 2
     - cmake --preset=release
-    - cmake --build --preset=release
+    - cmake --build --preset=release --target all docs
     
     # Creating distribution files
     - conan export-pkg . kafka-to-nexus/$VERSION@ -f -bf=build/Release
